# frontend-impact-analyzer

./: .gitignore  AGENTS.md  SKILL.md  TODO.md  project.md  pyproject.toml  pyrightconfig.json
.claude/agents/: case-writer.md  change-intent-judge.md
.qoder/repowiki/zh/content/: Context Collection System.md  开发指南.md  (+3 more)
agents/: openai.yaml
agents/claude/: case-refiner.md  evidence-checker.md
fixtures/diffs/: format_only.diff  shared_search_form.diff  symbol_change.diff
fixtures/expected/: sample_cluster_analysis.json  sample_merged_result.json  shared_search_form_cases.json
fixtures/extends_app/: tsconfig.base.json
internal/: HANDOFF.md  REAL_RUN_REVIEW.md  REFACTOR_PLAN.md
references/: agent-usage.md  impact-rules.md  project-conventions.md  real-run-workflow.md  route-conventions.md
schemas/: analysis-result.schema.json  analysis-state.schema.json  case-array.schema.json  cluster-analysis.schema.json  refined-cases.schema.json
scripts/: front_end_impact_analyzer.py  requirements.txt
scripts/analyzer/: ast_analyzer.py  case_builder.py  cluster_analysis_validator.py  cluster_builder.py  cluster_tasks.py  common.py  context_collector.py  diff_parser.py  global_change_classifier.py  impact_engine.py  models.py  noise_classifier.py  project_scanner.py  result_merger.py  source_classifier.py  workflow.py
tests/: conftest.py  test_ast_analyzer.py  test_case_builder.py  test_cluster_analysis_validator.py  test_diff_parser.py  test_impact_engine.py  test_integration_output.py  test_no_template_cases.py  test_project_scanner.py  test_workflow_intermediates.py
(+51 files in other folders)
