[project]
name = "frontend-impact-analyzer"
version = "0.1.0"
description = "A skill-oriented analyzer for tracing front-end change impact in React, React Router, and Vite codebases."
requires-python = ">=3.12"
dependencies = [
  "tree-sitter>=0.25,<0.26",
  "tree-sitter-typescript>=0.23,<0.24",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
]

[tool.uv]
package = false
